Fix large gap between grid items

--- a/assets/css/core/footer.css
+++ b/assets/css/core/footer.css
@@ -6,10 +6,18 @@
     @apply mt-5 first:mt-0 pb-4 hobbit;
 
     .widget-area {
-        @apply sm:flex sm:flex-wrap sm:items-start sm:justify-between;
+        @apply sm:flex sm:flex-wrap sm:items-start;
 
         > .widget {
-            @apply sm:w-[48.8%] lg:w-[32.4%] /*2xl:w-[24.3%]*/;
+            @apply sm:w-[48.8%]
+                sm:odd:mr-[2.3%]
+                lg:w-[32.4%]
+                lg:odd:mr-[1.35%]
+                lg:mr-[1.35%];
+
+            &:nth-child(3n) {
+              @apply lg:mr-0;
+            }
 
             &:nth-child(2) {
                 @apply sm:mt-0;
@@ -18,10 +26,6 @@
             &:nth-child(3) {
                 @apply lg:mt-0;
             }
-
-            /* &:nth-child(4) {
-                @apply 2xl:mt-0;
-            } */
         }
     }
 }
